--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,5 @@ requires-python = ">=3.10"
 dependencies = [
   "fastapi>=0.121.0",
   "uvicorn>=0.34.0",
-  "redis>=5.3.0"
+  "upstash-redis>=1.9.0"
 ]
