--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ requires-python = ">=3.10"
 dependencies = [
   "fastapi>=0.121.0",
   "uvicorn>=0.34.0",
-  "upstash-redis==1.5.0"
+  "upstash-redis==1.5.0",
+  "python-multipart
 ]
