--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,5 @@ dependencies = [
   "fastapi>=0.121.0",
   "uvicorn>=0.34.0",
   "upstash-redis==1.5.0",
-  "python-multipart
+  "python-multipart"
 ]
