--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ dependencies = [
   "uvicorn>=0.34.0",
   "upstash-redis==1.5.0",
   "python-multipart",
-  "psycopg[binary]"
+  "psycopg[binary]",
+  "jinja2>=3.1.2"
 ]
