--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
   "upstash-redis==1.5.0",
   "python-multipart",
   "psycopg[binary]",
-  "jinja2>=3.1.2"
+  "jinja2>=3.1.2",
+  "bcrypt>=4.0.0"
 ]
