--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
   "python-multipart",
   "psycopg[binary]",
   "jinja2>=3.1.2",
-  "bcrypt>=4.0.0"
+  "bcrypt>=4.0.0",
+  "requests>=2.31.0"
 ]
