--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,6 @@ dependencies = [
   "psycopg[binary]",
   "jinja2>=3.1.2",
   "bcrypt>=4.0.0",
-  "requests>=2.31.0"
+  "requests>=2.31.0",
   "pymongo"
 ]
