--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
   "jinja2>=3.1.2",
   "bcrypt>=4.0.0",
   "requests>=2.31.0",
-  "pymongo==4.7.2"
+  "pymongo==4.7.2",
+  "slowapi"
 ]
